# docker_compose-FastApi

./: Dockerfile  Makefile  pyproject.toml  requirements.txt
api/: app.py
common/: settings.py
docker_compose/: app.yaml  storage.yaml
