[tool.poetry]
name = "bewise"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
environ = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
